--- a/MyH5Web/src/Function/Intent_page2.html
+++ b/MyH5Web/src/Function/Intent_page2.html
@@ -3,6 +3,20 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>页面2</title>
+
+    <script type="text/javascript">
+        function intentToPage(w,obj){
+            let p = JSON.stringify(obj);
+            switch(w){
+                case 0:
+                    window.location.href="../Function/Intent_page2.html?parma="+p;
+                    break;
+                case 1:
+
+                    break;
+            }
+        }
+    </script>
 </head>
 <body>
 
